--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,18 @@
-server.port=8088
-#server.servlet.context-path=/url-shortener
+server.port=8080
 
 spring.data.mongodb.uri=mongodb://admin:admin@localhost:27017/url-shortener-db?authSource=admin
 
-spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
+spring.cache.cache-names=shortUrls
+spring.cache.redis.time-to-live=600000
+
+#Security info
+spring.security.user.name=admin
+spring.security.user.password=NDcxZTQyNDItNDBlZC00OTE4LTk2ZGUtMGM3YjEwZmI1M2Mw
+
+#Logging configuration
+logging.file.name=application.log
+logging.level.me.akinmukomi.assessment.urlshortener=ERROR
+logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
