--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,13 @@
 
 spring.data.mongodb.uri=mongodb://admin:admin@localhost:27017/url-shortener-db?authSource=admin
+
+
+#spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.cache-names=shortUrls
+spring.cache.redis.time-to-live=600000
+
+#Security info
+spring.security.user.name=admin
+spring.security.user.password=NDcxZTQyNDItNDBlZC00OTE4LTk2ZGUtMGM3YjEwZmI1M2Mw
